# App_Mobile_Master2

./: .env.example  README.md  docker-compose.yml  generate_docx.py  test_results.txt  test_results2.txt  test_results2_utf8.txt  test_results3.txt  test_results3_utf8.txt  test_results_utf8.txt
.github/workflows/: ci.yml
backend/: Dockerfile  generate_rapport.py  pyproject.toml  requirements.txt
backend/app/: auth.py  db.py  main.py  storage.py
backend/app/crypto/: paillier.py
backend/audit/: check_hash_chain.py  check_iam.py  check_network.py  check_photos_encrypted.py  check_votes_encrypted.py  run_all_audits.py
backend/db_init/: init.sql
backend/tests/: conftest.py  test_audit_chain.py  test_db_models.py  test_health.py  test_iam.py  test_paillier.py  test_upload_photo.py  test_votes_aggregate.py  test_votes_send.py
docs/: Documentation_Finale_Projet.docx  Documentation_Finale_V2.docx  Rapport_Conception_Votes_Securises.docx  api_reference.md  documentation_finale.md  rapport_conception.md  ~$cumentation_Finale_Projet.docx  ~$cumentation_Finale_V2.docx  ~$pport_Conception_Votes_Securises.docx
frontend/: dashboard.html  index.html  login.html  nginx.conf  qr-generator.html
frontend/css/: style.css
frontend/js/: api.js  app.js  crypto.js  paillier.js  qr-scanner.js
