[project]
name = "secure-votes-api"
version = "0.1.0"
description = "Système sécurisé de collecte et d'agrégation homomorphe de votes"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests", "audit"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "S",   # bandit (security)
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "S101",  # assert usage OK in tests
    "S311",  # pseudo-random OK for non-security use
    "S603",  # subprocess OK in audit scripts
    "S607",  # partial path OK in audit scripts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"audit/**" = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
